Profile text, form, and edit as admin button fixes (#27)
* Profile text and edit as admin button fixes

- Newlines in profile texts are now reflected in HTML with proper line breaks
- Fixed issue where the edit as admin button was not showing for the last record returned

* Profile form fix

- Fixed clicking on icon issue which now does not have a grey border outline when the icon boxes are clicked

* Profile form LinkedIn URL submit fix

- Fixed the issue where the profile form submission was not accepting certain valid URLs (eg. linkedin.com or ca.linkedin.com)

--- a/public/globalnl.css
+++ b/public/globalnl.css
@@ -92,6 +92,12 @@ body {
   box-shadow: none;
 }
 
+/* Hide the grey outline when clicked on icon boxes */
+.btn-outline-secondary:focus, .btn-outline-secondary:active {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
